Todo list basic functionality complete

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
                                     <label class="todoslabel" for="">My Todo List</label>
                                     <img id="closetodos" class="closetodos" src="images/closebutton.svg" alt="" width="25px">
                                 </div>
-                                <input id="todosinput" placeholder="Enter todo" type="text">
+                                <input id="todosinput" class="todosinput" placeholder="Enter todo" type="text">
                             </div>
-                            <p class="todosubmit" id="todosubmit">Add Todo</p>
-                        </form>
-                        <ul id="todolistitems" class="todos">
+                            <div class="todobtns">
+                                <p class="todosubmit" id="todosubmit">Add Todo</p>
+                                <p class="todoclear" id="todoclear">Clear All</p>
+                            </div>
+                            </form>
+                        <ul id="todoListItems" class="todos">
                         </ul>
                     </div>
                 </div>
