Completed links section without functionality

--- a/index.html
+++ b/index.html
@@ -50,17 +50,36 @@
                         <span>Location:&nbsp</span><p id="location"></p>
                     </div>
                 </div>
-                <div class="links">
+                <div class="llist">
+                    <p class="linkslist" id="linkslist">Links</p>
+                    <div class="links" id="links">
+                        <form class="linksform">
+                            <div class="linkstop">
+                                <div class="todoslabel">
+                                    <label class="todoslabel">My Links</label>
+                                    <img id="closelinks" class="closelinks" src="images/closebutton.svg" alt="" width="20px">
+                                </div>
+                                <input id="linksinput" class="linksinput " placeholder="Enter link" type="text">
+                            </div>
+                            <div class="todobtns">
+                                <p class="todosubmit" id="linksubmit">Add Link</p>
+                                <p class="todoclear" id="linkclear">Clear All</p>
+                            </div>
+                            </form>
+                        <ul id="linkListItems" class="linksul">
+                        </ul>
+                    </div>
+                </div>
+                <!-- OLD LINKS -->
+                <!-- <div class="links">
                     <p class="homelink" id="homelink">Links</p>
                     <div id="links" class="links-links">
                         <img id="closebtn" class="closebutton" src="images/closebutton.svg" alt="" width="25px">
                         <ul>
-                            <li class="list--item"><a href="https://www.gmail.com" target="_blank">Gmail</a></li>
-                            <li class="list--item"><a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a></li>
-                            <li class="list--item"><a href="https://www.thesaurus.com" target="_blank">Thesaurus</a></li>
+                            
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
         <script src="index.js"></script>
