Added link images to each corner

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             </div>
             <section class="bottom">
                 <div class="td">
-                    <p class="todolist" id="todolist">Todos</p>
+                    <div class="todocorner">
+                        <img id="todoimage" src="images/todolist3.png" alt="">
+                        <p class="todolist" id="todolist">Todos</p>
+                    </div>
                     <div class="todoitems" id="todoitems">
                         <form class="todosform">
                             <div class="todostop">
@@ -40,7 +43,7 @@
                                     <label class="todoslabel" for="">My Todo List</label>
                                     <img id="closetodos" class="closetodos" src="images/closebutton.svg" alt="" width="25px">
                                 </div>
-                                <input id="todosinput" class="todosinput" placeholder="Enter todo" type="text">
+                                <input id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
                             </div>
                             <div class="todobtns">
                                 <p class="todosubmit" id="todosubmit">Add Todo</p>
@@ -53,7 +56,11 @@
                 </div>
                 
                 <div class="llist">
-                    <p class="linkslist" id="linkslist">Links</p>
+                    <div class="linkscorner">
+                        <p class="linkslist" id="linkslist">Links</p>
+                        <img id="linksimage" src="images/links2.png" alt="">
+                    
+                    </div>
                     <div class="links" id="links">
                         <form class="linksform">
                             <div class="linkstop">
@@ -61,7 +68,7 @@
                                     <label class="todoslabel">My Links</label>
                                     <img id="closelinks" class="closelinks" src="images/closebutton.svg" alt="" width="20px">
                                 </div>
-                                <input id="linksinput" class="linksinput " placeholder="Enter link" type="text">
+                                <input id="linksinput" class="linksinput " placeholder="eg. email.com" type="text">
                             </div>
                             <div class="linkbtns">
                                 <p class="todosubmit" id="linksubmit">Add Link</p>
