Added fade in on load

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <title>Personal Dashboard</title>
     </head>
     <body id="body">
+        <div id="front"></div>
+        <div id="back"></div>
         <main>    
             <section class="top">
                 <div class="photodeets">
