Updated quote quotation marks to curly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </section>
             <h1 id="time" class="time"></h1>
             <div class="quote">
-                <h2 id="quote"></h2>
+                <div id="quote"></div>
                 <p id="quote--author"></p>
             </div>
             <section class="bottom">
@@ -42,7 +42,7 @@
                         <form class="todosform">
                             <div class="todostop">
                                 <div class="todoslabel">
-                                    <label class="todoslabel" for="">My Todo List</label>
+                                    <label class="todoslabel" for="">Todo List</label>
                                     <img id="closetodos" class="closetodos" src="images/closebutton.svg" alt="" width="25px">
                                 </div>
                                 <input id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
@@ -67,7 +67,7 @@
                         <form class="linksform">
                             <div class="linkstop">
                                 <div class="todoslabel">
-                                    <label class="todoslabel">My Links</label>
+                                    <label class="todoslabel" id="linkslabel">Favorite Links</label>
                                     <img id="closelinks" class="closelinks" src="images/closebutton.svg" alt="" width="20px">
                                 </div>
                                 <input id="linksinput" class="linksinput " placeholder="eg. email.com" type="text">
