--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                         <p class="todolist" id="todolist">Todos</p>
                     </div>
                     <div class="todoitems" id="todoitems">
-                        <form class="todosform">
+                        <form class="todosform" autocomplete="off">
                             <div class="todostop">
                                 <div class="todoslabel">
                                     <label class="todoslabel" for="">Todo List</label>
-                                    <img id="closetodos" class="closetodos" src="images/closebutton.svg" alt="" width="25px">
+                                    <img id="closetodos" class="closetodos" src="images/closebutton1.svg" alt="" width="25px">
                                 </div>
                                 <input id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
                             </div>
@@ -61,11 +61,11 @@
                         <img id="linksimage" src="images/links2.png" alt="">
                     </div>
                     <div class="links" id="links">
-                        <form class="linksform">
+                        <form class="linksform" autocomplete="off">
                             <div class="linkstop">
                                 <div class="todoslabel">
+                                    <img id="closelinks" class="closelinks" src="images/closebutton1.svg" alt="" width="20px">
                                     <label class="todoslabel" id="linkslabel">Favorite Links</label>
-                                    <img id="closelinks" class="closelinks" src="images/closebutton.svg" alt="" width="20px">
                                 </div>
                                 <input id="linksinput" class="linksinput " placeholder="eg. email.com" type="text">
                             </div>
