--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             </div>
         </main>
         <script src="index.js"></script>
+        <script src="todo.js"></script>
     </body>
 </html>
 
