Completed functionality - needs debugging on submit

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                                     <label class="todoslabel" for="">Todo List</label>
                                     <img id="closetodos" class="closetodos" src="images/closebutton1.svg" alt="" width="25px">
                                 </div>
-                                <input id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
+                                <input type="text" type="button" id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
                             </div>
                             <div class="todobtns">
-                                <p class="todosubmit" id="todosubmit">Add Todo</p>
+                                <button type="submit" class="todosubmit" id="todosubmit" >Add Todo</button>
                                 <p class="todoclear" id="todoclear">Clear All</p>
                             </div>
                             </form>
@@ -70,7 +70,7 @@
                                 <input id="linksinput" class="linksinput " placeholder="eg. email.com" type="text">
                             </div>
                             <div class="linkbtns">
-                                <p class="todosubmit" id="linksubmit">Add Link</p>
+                                <button type="submit" class="todosubmit" id="linksubmit">Add Link</button>
                                 <p class="todoclear" id="linksclear">Clear All</p>
                             </div>
                             </form>
@@ -82,6 +82,7 @@
         </main>
         <script src="index.js"></script>
         <script src="todo.js"></script>
+        <script src="links.js"></script>
     </body>
 </html>
 
