Final stage - debug of todo menu required

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <input type="text" type="button" id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
                             </div>
                             <div class="todobtns">
-                                <button type="submit" class="todosubmit" id="todosubmit" >Add Todo</button>
+                                <button class="todosubmit" id="todosubmit" >Add Todo</button>
                                 <p class="todoclear" id="todoclear">Clear All</p>
                             </div>
                             </form>
@@ -70,7 +70,7 @@
                                 <input id="linksinput" class="linksinput " placeholder="eg. email.com" type="text">
                             </div>
                             <div class="linkbtns">
-                                <button type="submit" class="todosubmit" id="linksubmit">Add Link</button>
+                                <button class="todosubmit" id="linksubmit">Add Link</button>
                                 <p class="todoclear" id="linksclear">Clear All</p>
                             </div>
                             </form>
