--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <form class="todosform" autocomplete="off">
                             <div class="todostop">
                                 <div class="todoslabel">
-                                    <label class="todoslabel" for="">Enter task</label>
+                                    <label class="todoslabel" for="">Todo List</label>
                                     <img id="closetodos" class="closetodos" src="images/closebutton1.svg" alt="" width="25px">
                                 </div>
                                 <input type="text" type="button" id="todosinput" class="todosinput" placeholder="eg. watch movie" type="text">
